<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="71dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_logoMenu"
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:foreground="@mipmap/ic_launcher_foreground"
            app:srcCompat="@drawable/ic_launcher_foreground"
            android:importantForAccessibility="no" />

        <ImageButton
            android:id="@+id/img_backMenu"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/des_btn_back"
            android:foreground="@android:drawable/ic_menu_compass"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/img_settingMenu"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/des_btn_setting"
            android:foreground="@android:drawable/ic_menu_manage"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_topic_1"
        android:layout_width="162dp"
        android:layout_height="145dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/back"
        android:gravity="center_horizontal|center_vertical"
        android:justificationMode="none"
        android:text="@string/topic_1"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/tv_topic_2"
        android:layout_width="162dp"
        android:layout_height="145dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/back"
        android:gravity="center_horizontal|center_vertical"
        android:justificationMode="none"
        android:text="@string/topic_2"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/tv_topic_4"
        android:layout_width="162dp"
        android:layout_height="145dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/back"
        android:gravity="center_horizontal|center_vertical"
        android:justificationMode="none"
        android:text="@string/topic_4"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/tv_topic_5"
        android:layout_width="162dp"
        android:layout_height="145dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="365dp"
        android:background="@drawable/back"
        android:gravity="center_horizontal|center_vertical"
        android:justificationMode="none"
        android:text="@string/topic_5"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/tv_topic_6"
        android:layout_width="162dp"
        android:layout_height="145dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="365dp"
        android:background="@drawable/back"
        android:gravity="center_horizontal|center_vertical"
        android:justificationMode="none"
        android:text="@string/topic_6"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/tv_topic_3"
        android:layout_width="162dp"
        android:layout_height="145dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/back"
        android:gravity="center_horizontal|center_vertical"
        android:justificationMode="none"
        android:text="@string/topic_3"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>