<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="71dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_logoSetting"
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:foreground="@mipmap/ic_launcher_foreground"
            app:srcCompat="@drawable/ic_launcher_foreground"
            android:importantForAccessibility="no" />

        <ImageButton
            android:id="@+id/img_backSetting"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/des_btn_back"
            android:foreground="@android:drawable/ic_menu_compass"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/img_settingSetting"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/des_btn_setting"
            android:foreground="@android:drawable/ic_menu_manage"
            tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_settingName"
        android:layout_width="403dp"
        android:layout_height="85dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <EditText
        android:id="@+id/etv_oldPassword"
        android:layout_width="403dp"
        android:layout_height="125dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/hint_password_old"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settingName" />

    <EditText
        android:id="@+id/etv_newPassword"
        android:layout_width="403dp"
        android:layout_height="125dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/hint_password_new"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etv_oldPassword" />


    <Button
        android:id="@+id/btn_updateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etv_newPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>