<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="71dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_logoQuiz"
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:foreground="@mipmap/ic_launcher_foreground"
            app:srcCompat="@drawable/ic_launcher_foreground"
            android:importantForAccessibility="no" />

        <ImageButton
            android:id="@+id/img_backQuiz"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/des_btn_back"
            android:foreground="@android:drawable/ic_menu_compass"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/img_settingQuiz"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/des_btn_setting"
            android:foreground="@android:drawable/ic_menu_manage"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="402dp"
        android:layout_height="125dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_quizTopic" />

    <TextView
        android:id="@+id/tv_quizTopic"
        android:layout_width="403dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <EditText
        android:id="@+id/etv_answer"
        android:layout_width="403dp"
        android:layout_height="125dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="@string/hint_answer"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question" />

    <Button
        android:id="@+id/btn_submitAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="9dp"
        android:text="@string/btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etv_answer" />


</androidx.constraintlayout.widget.ConstraintLayout>