<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="71dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_logoOverview"
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:foreground="@mipmap/ic_launcher_foreground"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/img_backOverview"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/des_btn_back"
            android:foreground="@android:drawable/ic_menu_compass"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/img_settingOverview"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/des_btn_setting"
            android:foreground="@android:drawable/ic_menu_manage"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_questionDetail"
        android:layout_width="395dp"
        android:layout_height="245dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/tv_topicDetail"
        android:layout_width="395dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/tv_scoreDetail"
        android:layout_width="395dp"
        android:layout_height="245dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="303dp"
        android:ems="10"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/btn_startQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="553dp"
        android:text="@string/btn_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>